# osc8er

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  publish.yml
src/: main.rs
